Allow image bluring
Involved moving image to it's own element and adding a new context menu option.

--- a/tab.html
+++ b/tab.html
@@ -3,6 +3,7 @@
   <link href="./tab.css" rel="stylesheet">
 </head>
 <body>
+  <div id="image"></div>
   <div id="overlay"></div>
   <div id="secondary-overlay"></div>
 
@@ -10,6 +11,7 @@
     <ul class="menu-options">
       <li class="menu-option" data-action="shuffle">Shuffle Image</li>
       <li class="menu-option js-imagelock" data-action="toggleLock">Lock Image</li>
+      <li class="menu-option js-blur" data-action="toggleBlur">Blur Image</li>
       <li class="menu-option has-submenu">
         Transition
         <div class="menu">
